# Desktop-intelligent-assistant

./: .env.example  .gitattributes  .gitignore  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  technical-document.md
Ark-Models-main/: README.md
config/: model_sources.example.toml  model_sources.toml  persona.example.toml  settings.example.toml
docs/: collaboration-guide.md  resource-notice.md  run-guide.md  technical-design.md  test-record.md  协作说明.md  测试记录.md  运行说明.md
scripts/: copy_frontend_vendor.mjs  setup.bat  setup.sh  start.bat  启动.sh
src/desktop_assistant/: __init__.py  __main__.py  audit.py  confirmations.py  desktop_context.py  env.py  llm.py  memory.py  model_registry.py  model_sources.py  models.py  profiles.py  qt_app.py  runtime.py  service.py  settings.py  tools.py
src/desktop_assistant/ui/: app.js  index.html  styles.css
tests/: test_desktop_context.py  test_llm.py  test_memory.py  test_model_registry.py  test_model_sources.py  test_profiles.py  test_service.py  test_settings.py  test_tools.py
